-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b50
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082835 | emb-9 | Nils Eliasson | P1 | Resolved | Fixed | team |
----------System.err:(52/2406)----------
stdout: [CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption1"
Unrecognized text MyBoolOption1 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption2"
Unrecognized text MyBoolOption2 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption3"
Unrecognized text MyBoolOption3 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption4"
Unrecognized text MyBoolOption4 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
];
stderr: [java version "1.9.0-internal-fastdebug"
Java(TM) SE Runtime Environment (build 1.9.0-internal-fastdebug-20150113113607.neliasso.8027829-b00)
Java HotSpot(TM) Server VM (build 1.9.0-internal-fastdebug-20150113113607.neliasso.8027829-b00, mixed mode)
]
exitValue = 0
java.lang.RuntimeException: 'CompilerOracle: option com/oracle/Test.test bool MyBoolOption1 = true' missing from stdout/stderr
at com.oracle.java.testlibrary.OutputAnalyzer.shouldContain(OutputAnalyzer.java:80)
at CheckCompileCommandOption.verifyValidOption(CheckCompileCommandOption.java:172)
at CheckCompileCommandOption.main(CheckCompileCommandOption.java:202)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:498)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:745)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'CompilerOracle: option com/oracle/Test.test bool MyBoolOption1 = true' missing from stdout/stderr
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 'CompilerOracle: option com/oracle/Test.test bool MyBoolOption1 = true' missing from stdout/stderr
stdout: [CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption1"
Unrecognized text MyBoolOption1 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption2"
Unrecognized text MyBoolOption2 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption3"
Unrecognized text MyBoolOption3 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
CompileCommand: Bad pattern
"option com/oracle/Test test MyBoolOption4"
Unrecognized text MyBoolOption4 after command
Usage: '-XX:CompileCommand=command,"package/Class.method()"'
Use: '-XX:CompileCommand=help' for more information.
];
stderr: [java version "1.9.0-internal-fastdebug"
Java(TM) SE Runtime Environment (build 1.9.0-internal-fastdebug-20150113113607.neliasso.8027829-b00)
Java HotSpot(TM) Server VM (build 1.9.0-internal-fastdebug-20150113113607.neliasso.8027829-b00, mixed mode)
]
exitValue = 0
java.lang.RuntimeException: 'CompilerOracle: option com/oracle/Test.test bool MyBoolOption1 = true' missing from stdout/stderr
at com.oracle.java.testlibrary.OutputAnalyzer.shouldContain(OutputAnalyzer.java:80)
at CheckCompileCommandOption.verifyValidOption(CheckCompileCommandOption.java:172)
at CheckCompileCommandOption.main(CheckCompileCommandOption.java:202)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:498)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:745)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'CompilerOracle: option com/oracle/Test.test bool MyBoolOption1 = true' missing from stdout/stderr
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 'CompilerOracle: option com/oracle/Test.test bool MyBoolOption1 = true' missing from stdout/stderr
- backported by
-
JDK-8082835 compiler/oracle/CheckCompileCommandOption.java nightly failure
-
- Resolved
-
- relates to
-
JDK-8027829 CompileCommand does not accept all JLS-conformant class/method names
-
- Resolved
-