8069035: compiler/oracle/CheckCompileCommandOption.java nightly failure

Fixed whitespace handling and added test cases

Reviewed-by: kvn, anoll, zmajo